# network_api_fastapi

./: .pre-commit-config.yaml  alembic.ini  docker-compose.yml  pyproject.toml  settings.py  setup.cfg  tags_metadata.py
alembic/: env.py
alembic/versions/: 0001.py
apps/: main.py
apps/authorization/: __init__.py  auth_utilities.py  handlers.py  routers.py  schemas.py
apps/common/: __init__.py  base_routers.py  base_statements.py  common_types.py  common_utilities.py  constants.py  db.py  dependencies.py  enum.py  exceptions.py  exceptions_handlers.py  orm_services.py  schemas.py  user_dependencies.py
apps/likes/: __init__.py  handlers.py  models.py  routers.py  schemas.py  statements.py
apps/posts/: __init__.py  handlers.py  models.py  routers.py  schemas.py  statements.py
apps/user/: __init__.py  handlers.py  models.py  routers.py  schemas.py  statements.py  user_utilities.py
