[tool.poetry]
name = "network-api"
version = "0.1.0"
description = ""
authors = ["victro-nuzhniy <nuzhniyva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
pydantic = {version = "^2.6.1", extras = ["dotenv"]}
passlib = "^1.7.4"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
databases = "^0.8.0"
alembic = "^1.13.1"
sqlalchemy-utils = "^0.41.1"
pydantic-settings = "^2.1.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^24.1.1"
xenon = "^0.9.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
wemake-python-styleguide = "^0.18.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | .pytest_cache
  | .tox
  | docs
  | docs_src
  | .venv
  | .mypy_cache
)/
'''
include_trailing_comma = true